Fantasy Football Capstone Project Update

--- a/Fantasy Football R Markdown.Rmd
+++ b/Fantasy Football R Markdown.Rmd
@@ -2,7 +2,9 @@
 title: "Fantasy Football Capstone Project"
 author: "Alex Brandt"
 date: "December 30, 2018"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 
